<resources>
    <string name="app_name">Guide:Hearthstone4U</string>
    <string name="tets_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-7472786282026789/3952857152</string>
    <string name="card_atlas">Card Atlas</string>
    <string name="custom_deck">Custom Deck</string>
    <string name="recommand_deck">Recommand Deck</string>
    <string name="arena_simulator">Arena Simulator</string>

    <string name="coming_soon">Coming soon...</string>
    <string name="exit_alert">Exit %s ?</string>
    <string name="delte_deck_alert">Remove Deck: %s ?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filter">Advanced\nSearch  </string>
    <string name="addFilter">Add Filter</string>
    <string name="search">Search</string>
    <string name="searchHint">Enter the name</string>
    <string name="clear">Clear</string>
    <string name="add_same_filter_error">Already has same filter.</string>
    <string name="empty_deck_name_error">Please enter the name of deck</string>
    <string name="exist_deck_name_error">Already has same name</string>
	<string name="input_empty_error">Name can not be empty</string>
	
    <string name="add_deck">(+) Add Deck</string>
    <string name="add_card">(+) Add Card</string>
	<string name="new_simulate">New Arena Simulate</string>
    <string name="save_deck">Save Deck</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="refresh">Refresh</string>
	<string name="pick_card">Pick Card</string>
	<string name="rename">Rename</string>
	
	<string name="cancel_arena_alert">Give up this Arena Simulate?</string>
    <string name="cancel_deck_alert">End Editing without Saving?</string>
    <string name="add_deck_card_info">Added Card:%s to the Deck</string>
    <string name="add_deck_card_failed">Add Card Failed...</string>
    <string name="delete_deck_card_info">Deleted Card:%s from the Deck</string>
    <string name="load_deck_failed">Download Decks Failed... Please Retry</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="report">Report</string>

    <string name="cost">Cost</string>
    <string name="attack">Attack</string>
    <string name="hp">HP</string>

    <string name="cardType">Type</string>
    <string name="minion">Minion</string>
    <string name="spell">Spell</string>
    <string name="weapon">Weapon</string>

    <string name="cardClass">Class</string>
    <string name="normal">Normal</string>
    <string name="warrior">Warrior</string>
    <string name="hunter">Hunter</string>
    <string name="mage">Mage</string>
    <string name="warlock">Warlock</string>
    <string name="rogue">Rogue</string>
    <string name="shaman">Shaman</string>
    <string name="priest">Priest</string>
    <string name="druid">Druid</string>
    <string name="paladin">Paladin</string>

    <string name="cardRace">Race</string>
    <string name="none"></string>
    <string name="dragon">Dragon</string>
    <string name="murloc">Murloc</string>
    <string name="beast">Beast</string>
    <string name="pirate">Pirate</string>
    <string name="demon">Demon</string>
    <string name="totem">Totem</string>
    <string name="machine">Machine</string>

    <string name="cardRarity">Rarity</string>
    <string name="free">Free</string>
    <string name="common">Common</string>
    <string name="rare">Rare</string>
    <string name="epic">Epic</string>
    <string name="legendary">Legendary</string>

    <string name="cardSet">Source</string>
    <string name="basic">Basic</string>
    <string name="classic">Classic</string>
    <string name="naxx">NAXX</string>
    <string name="brm">BRM</string>
    <string name="gvg">GVG</string>
    <string name="tgt">TGT</string>
    <string name="loe">LOE</string>

    <string name="cardTalent">Talent</string>
    <string name="battlecry">Battle Cry</string>
    <string name="stealth">Stealth</string>
    <string name="charge">Charge</string>
    <string name="combo">Combo</string>
    <string name="deathrattle">Death Rattle</string>
    <string name="divineshield">Divine Shield</string>
    <string name="enrage">Enrage</string>
    <string name="freeze">Freeze</string>
    <string name="overload">Overload</string>
    <string name="secret">Secret</string>
    <string name="silence">Silence</string>
    <string name="spelldamage">Spell Damage</string>
    <string name="summon">Summon</string>
    <string name="windfury">Wind Fury</string>
    <string name="taunt">Taunt</string>
    <string name="immune">Immune</string>
    <string name="inspire">Inspire</string>
    <string name="joust">Joust</string>
    <string name="draw">Draw</string>
    <string name="aoe">AOE</string>
    <string name="heal">Heal</string>
    <string name="discover">Discover</string>
</resources>
