<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nameView"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/imageView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:text="@string/n0001" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beast"
        android:id="@+id/raceView"
        android:layout_below="@id/nameView"
        android:layout_toRightOf="@id/imageView"
        android:layout_marginLeft="10dp"
        android:textColor="#FF0000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/minion"
        android:id="@+id/typeView"
        android:layout_below="@id/raceView"
        android:layout_toRightOf="@id/imageView"
        android:layout_marginLeft="10dp"
        android:textColor="#ff8000ff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/normal"
        android:id="@+id/rarityView"
        android:layout_below="@id/raceView"
        android:layout_toRightOf="@id/typeView"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/classic"
        android:id="@+id/setView"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/rarityView"
        android:layout_marginRight="10dp"
        android:textColor="#000000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/taunt"
        android:id="@+id/attributeView"
        android:layout_below="@id/typeView"
        android:layout_toRightOf="@id/imageView"
        android:layout_marginLeft="10dp"
        android:textColor="#FF0000"/>

</RelativeLayout>