<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="1" />
    <LinearLayout
        android:id="@+id/editDeckSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/deck_inifo_border"
        android:padding="5dp"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageClass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/mage"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 0 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar0"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 1 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar1"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 2 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar2"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 3 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar3"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 4 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar4"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 5 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar5"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[ 6 ]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar6"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="[7+]"
                        android:textColor="#000000"/>

                    <ProgressBar
                        android:id="@+id/manabar7"
                        style="@android:style/Widget.ProgressBar.Horizontal"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:progress="50" />
                    <TextView
                        android:id="@+id/manaNum7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="0"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textColor="#ff0000ff"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addDeckCardBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#ff00a0ff"
                android:text="@string/add_card"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/doneDeckBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="3"
                android:background="#ff00ff00"
                android:text="@string/done"
                android:textColor="#000000"  />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/addDeckBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#ff00a0ff"
        android:text="@string/add_deck"
        android:textColor="#ffffffff" />


</LinearLayout>